# MegaBot

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  __init__.py  docker-compose.override.yaml  docker-compose.yml  entrypoint.sh  llms.txt  mega-config.yaml.template  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
adapters/: discord_adapter.py  mcp_adapter.py  memu_adapter.py  nanobot_adapter.py  openclaw_adapter.py  push_notification_adapter.py  signal_adapter.py  slack_adapter.py  unified_gateway.py  voice_adapter.py
adapters/messaging/: __init__.py  __main__.py  imessage.py  server.py  sms.py  telegram.py  whatsapp.py
adapters/security/: tirith_guard.py
core/: __init__.py  admin_handler.py  agent_coordinator.py  agent_file_ops.py  agents.py  app.py  approval_workflows.py  build_session.py  config.py  dependencies.py  discovery.py  drivers.py  instrumentation.py  interfaces.py  lifecycle.py  llm_providers.py  logging_setup.py  loki.py  message_router.py  openclaw_handler.py  orchestrator.py  orchestrator_components.py  permissions.py  projects.py  resource_guard.py  secrets.py  task_utils.py  websocket_handler.py
core/memory/: backup_manager.py  chat_memory.py  knowledge_memory.py  mcp_server.py  user_identity.py
core/network/: gateway.py
core/rag/: pageindex.py
docs/: ADAPTER_AUDIT_REPORT.md  ARCHITECTURE_DISCOVERY_REPORT.md  ASSESSMENT.md  CROSS_DOMAIN_ANALYSIS.md  architecture.md  configuration.md  index.md  platforms.md  search.md  testing.md  troubleshooting.md  voice.md
docs/api/: webhooks.md  websocket.md
docs/architecture/: overview.md
docs/deployment/: DEPLOYMENT.md  configuration.md  installation.md  scaling.md  troubleshooting.md
docs/development/: ci-cd.md  index.md  testing.md
features/dash_data/: agent.py
megabot/: __init__.py  cli.py
megabot/adapters/: __init__.py  discord_adapter.py  mcp_adapter.py  memu_adapter.py  nanobot_adapter.py  openclaw_adapter.py  push_notification_adapter.py  signal_adapter.py  slack_adapter.py  unified_gateway.py  voice_adapter.py
megabot/adapters/messaging/: __init__.py  imessage.py  server.py  whatsapp.py
megabot/adapters/security/: tirith_guard.py
megabot/core/: __init__.py  admin_handler.py  agent_coordinator.py  agent_file_ops.py  app.py  approval_workflows.py  build_session.py  constants.py  dependencies.py  drivers.py  lifecycle.py  llm_providers.py  logging_setup.py  loki.py  message_router.py  openclaw_handler.py  orchestrator.py  orchestrator_components.py  secrets.py  websocket_handler.py
megabot/core/memory/: __init__.py  backup_manager.py  knowledge_memory.py  mcp_server.py  user_identity.py
megabot/core/network/: gateway.py
megabot/core/rag/: pageindex.py
megabot/features/dash_data/: agent.py
megabot/tools/: restore_backup.py
tests/: benchmark_tirith.py  benchmarking.py  benchmarks.py  conftest.py  test_adapters.py  test_admin_handler.py  test_admin_handler_round2.py  test_agent_coordinator.py  test_agent_coordinator_coverage.py  test_agent_coordinator_extra.py  test_agent_coordinator_round2.py  test_agent_coordinator_toctou.py  test_agents.py  test_backup_manager.py  test_chat_memory.py  test_config.py  test_coverage_completion_final.py  test_coverage_gaps.py  test_coverage_phase4.py  test_coverage_round3.py  test_dash_data_agent.py  test_dependencies_full.py  test_discord_adapter.py  test_discovery.py  test_drivers.py  test_extra_llm_providers.py  test_fastapi_endpoints.py  test_gateway_round2.py  test_instrumentation_discovery.py  test_integration_adapters.py  test_interfaces.py  test_knowledge_memory.py  test_llm_providers.py  test_llm_providers_coverage.py  test_logging_setup.py  test_loki.py  test_main.py  test_mcp_adapter.py  test_mcp_server.py  test_megabot_messaging.py  (+43 more)
ui/: README.md  index.html  package.json  vite.config.ts
ui/public/: manifest.json  sw.js
ui/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx
ui/src/components/: ApprovalPanel.tsx  ChatInput.tsx  ChatPanel.tsx  ConnectionStatus.tsx  ErrorBoundary.tsx  MemoryPanel.tsx  MessageBubble.tsx  MessageList.tsx  ModeSelector.tsx  Sidebar.tsx  TerminalPanel.tsx  index.ts
ui/src/hooks/: useMessages.ts  useWebSocket.ts
ui/src/test/: setup.ts
ui/src/types/: index.ts
